# cpg

./: .gitignore  CMakeLists.txt  Language.cpp  README.md  UtfCodepage.cpp  tableCreator.cpp
data/: Apple.h  CP932.h  CP936.h  CP949.h  CP950.h  GSM.h  ISO8859.h  KPS9566.h  MAC.h  PC.h  WINDOWS.h  bestFit.h  bestfit1361.h  bestfit932.h  bestfit936.h  bestfit949.h  bestfit950.h  ecbdic.h  misc.h
demo/: Args.cpp  Args.h  converter.cpp
include/cpg/: BigTableCodepage.h  Codepage.h  CpManager.h  Language.h  TableCodepage.h  UtfCodepage.h
src/: BigTableCodepage.cpp  Codepage.cpp  CpManager.cpp  Language.cpp  TableCodepage.cpp  UtfCodepage.cpp
